# fip

./: .gitignore  Cargo.toml  README.md  build.sh  install.sh  update-version.sh  version.sh
.cursor/rules/: builtin-functions.md  builtin-functions.mdc  meta-standard.cursorrules  syntax-definition.mdc
docs/: index.html  style.css
docs/tools/build-docs/: Cargo.toml
examples/: basics.fip  collections.fip  control-flow.fip  destructuring.fip  effects.fip  functions.fip  http.fip  imports.fip  main.fip  predicates.fip  spread.fip  sum.fip
scripts/: build-docs.sh
src/: ast.rs  cli.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
syntax/: async.md  comments.md  core.md  data-structures.md  data-types.md  errors.md  functions.md  imports.md  index.md  operators.md  overview.md  promise.md  variables.md
syntax/core/: array.md  control.md  effects.md  identity.md  math.md  object.md  values.md
syntax/http/: http.md
test-program/: broken.fip  builtins.fip  curry-test.fip  destructure-test.fip  for-each.fip  if.fip  lint-test.fip  main.fip  object-destructure-test.fip  scope.fip  spread.fip  sum.fip
test-server/: Cargo.toml  README.md
test-server/src/: main.rs
tools/format/: Cargo.toml  README.md
tools/format/src/: main.rs
tools/linter/: Cargo.toml  README.md
tools/linter-extension/: .vscodeignore  CURSOR_INSTALL.md  DEBUG.md  README.md  package-lock.json  package.json
tools/linter-extension/src/: extension.ts
tools/linter/src/: main.rs
tools/syntax/: .vscodeignore  README.md  language-configuration.json  package.json
(+2 files in other folders)
