[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-server"
path = "src/main.rs"

[dependencies]
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

